fixed bug about random answers

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,6 +55,6 @@
     <string name="home">Home</string>
     <string name="repeat">Repeat</string>
     
-    <string name="action_settings">Settings</string>
+    <string name="stats">Stadistics</string>
 
 </resources>
